# Kanban

./: .gitignore  .pre-commit-config.yaml  DARK_MODE_SETUP.md  LANDING_PAGE_CONTEXT.md  PROJECT_RESTRUCTURE_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  api.http  create_board.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt  step.txt  tailwind.config.js  tt.html
KanbanBoardApp/: asgi.py  db.sqlite3  manage.py  package-lock.json  settings.py  urls.py  wsgi.py
KanbanBoardApp/KanbanBoardApp/: settings.py  urls.py
KanbanBoardApp/board/: admin.py  forms.py  models.py  urls.py  views.py
KanbanBoardApp/board/migrations/: 0001_initial.py  0002_alter_board_workspace.py  0002_alter_cardactivity_options_and_more.py  0002_alter_list_board.py  0003_alter_list_list_name.py  0004_alter_card_card_name.py  0005_alter_card_card_name.py  0006_boardinvitaton.py  0007_alter_boardinvitaton_status.py  (+1 more)
KanbanBoardApp/management/commands/: tailwind.py
KanbanBoardApp/users/: forms.py  models.py  urls.py  views.py
blog/: blog_loader.py  urls.py  views.py
blog_posts/: getting-started.md  kanban-vs-scrum.md  productivity-tips.md  remote-vs-inoffice.md
board/: admin.py  blog_loader.py  forms.py  landing_context.py  models.py  permissions.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_alter_boardinvitaton_status.py
static/: input.css  output.css  verify_daisyui.sh
static/css/: base.css  input.css  main.css  output.css  tailwind.css  typography.css
static/js/: boardIn.js  main.js  toDo.js  utils.js
static/src/: input.css
templates/: base.html  base_auth.html  base_board.html
templates/blog/: detail.html  list.html
templates/board/: AboutUs.html  Success.html  board.html  contact.html  home.html
templates/boards/: Home.html  boardIn.html  landing.html
templates/components/: header.html
templates/cotton/: COMPONENTS_GUIDE.md  app_cta.html  app_faq.html  app_feature.html  app_footer.html  app_hero.html  app_navbar.html  app_pricing.html  auth_header.html  badge.html  button.html  card.html  checkbox.html  container.html  datepicker.html  navbar.html  section.html  separator.html  spinner.html  switch.html  textarea.html  toast.html  toggle.html
templates/users/: Login.html  Profile.html  Register.html
users/: auth_backends.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+150 files in other folders)
