[project]
name = "kanban"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-allauth>=65.3.1",
    "django-extensions>=3.2.3",
    "django-browser-reload>=1.17.0",
    "pillow>=11.1.0",
    "requests>=2.32.5",
    "jwt>=1.4.0",
]
